fixed white space

--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -5,7 +5,7 @@
 
 .Homepage-body {
   background-color: lightyellow;
-  min-height: 85vh;
+  height:100vh;
   font-size: calc(5px + 1.5vmin);
   word-wrap: break-word;
    width:800px;
@@ -18,6 +18,7 @@
   font-size: calc(20px + 3vmin);
   display: flex;
   flex-direction: column;
+  margin-top:-5vh;
 }
 
 p {
