--- a/src/Userpage.css
+++ b/src/Userpage.css
@@ -1,22 +1,17 @@
 .Userpage {
     text-align: center;
-  background-color: lightyellow;
+    background-color: lightyellow;
 }
 
 .Userpage-header {
-  background-color: lightyellow;
-  min-height: 10%;
   font-size: calc(20px + 2vmin);
-  display: flex;
-  flex-direction: column;
+  margin-top: -5vh;
 }
 
 .Userpage-body {
   background-color: lightyellow;
-  min-height: 88vh;
-  max-height: 88vh;
+  height: 100vh;
   font-size: calc(5px + 1.5vmin);
-  word-wrap: break-word;
    width:80%;
    margin: auto;
 }
